<?xml version="1.0" encoding="utf-8"?><!--XML code for activity_main.xml-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <!--Heading Text View-->
    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/audio_recorder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <!--This will display the status of our app when we will record some audio
    and play that audio-->
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="18sp" />

    <!--Linear Layout for adding textviews in horizontal manner-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <!--Textview to start audio recording
        drawableTop will add above mic image-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btnStop"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:padding="5dp"
                    android:text="@string/stop_recording"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_stop_recording" />

                <TextView
                    android:id="@+id/btnPlay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:padding="5dp"
                    android:text="@string/play_recording"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_play_audio" />

                <TextView
                    android:id="@+id/btnStopPlay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:lines="2"
                    android:padding="5dp"
                    android:text="@string/stop_playing"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_pause_audio" />

                <TextView
                    android:id="@+id/btnUpload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:padding="5dp"
                    android:text="@string/start_recording"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_start_recording" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btnGenerateSummary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:lines="2"
                    android:padding="5dp"
                    android:text="@string/generate_summary"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/ic_summary" />

            </TableRow>
        </TableLayout>

        <!--Textview to stop audio recording
               drawableTop will add above mic image-->

        <!--Textview to play audio that is recorded
       drawableTop will add above mic image-->

        <!--Textview to pause the play of audio recording
       drawableTop will add above mic image-->

    </LinearLayout>

</RelativeLayout>