<?xml version="1.0" encoding="utf-8"?><!--XML code for activity_main.xml-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <!--Heading Text View-->

    <TextView
        android:id="@+id/txthead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/audio_uploader"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <!--This will display the status of our app when we will record some audio
    and play that audio-->
    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txthead"
        android:layout_marginTop="86dp"
        android:text="@string/status"
        android:textAlignment="center"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <!--Textview to start audio recording
        drawableTop will add above mic image-->

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btnUpload"
                    android:layout_width="0dp"
                    android:layout_height="145dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:lines="2"
                    android:padding="5dp"
                    android:text="@string/audio_uploader"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:drawableTopCompat="@drawable/ic_start_uploading" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="43dp"
                    android:layout_height="50dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/btnGenerateSummary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:lines="2"
                    android:padding="5dp"
                    android:text="@string/generate_summary"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:drawableTopCompat="@drawable/ic_summary" />

            </TableRow>

            <TableRow
                android:layout_width="20dp"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="44dp"
                    android:layout_height="57dp"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentEnd="false"
                    android:translationX="10dp"
                    app:backgroundTint="@color/teal_700"
                    app:drawableTopCompat="@drawable/ic_back"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
            </TableRow>

        </TableLayout>

        <!--Textview to stop audio recording
               drawableTop will add above mic image-->

        <!--Textview to play audio that is recorded
       drawableTop will add above mic image-->

        <!--Textview to pause the play of audio recording
       drawableTop will add above mic image-->

    </LinearLayout>

    <!--Linear Layout for adding textviews in horizontal manner-->

</RelativeLayout>